# ds3os

./: .clang-format  .editorconfig  .gitignore  .prettierignore  CMakeLists.txt  CMakePresets.json  DarkSouls2.Dockerfile  DarkSouls3.Dockerfile  README.md  README_zhCN.md  default.nix  docker-compose.yml  sonar-project.properties
Source/: CMakeLists.txt
Source/Injector/: CMakeLists.txt  Entry.cpp  HookManager.cpp  HookManager.h  InjectorContext.h  ShutdownSignal.cpp  ShutdownSignal.h
Source/Injector/Config/: BuildConfig.h  RuntimeConfig.cpp  RuntimeConfig.h
Source/Injector/Hooks/: Hook.h
Source/Injector/Hooks/DarkSouls2/: DS2_LogProtobufsHook.cpp  DS2_LogProtobufsHook.h  DS2_ReplaceServerAddressHook.cpp  DS2_ReplaceServerAddressHook.h
Source/Injector/Hooks/DarkSouls3/: DS3_ReplaceServerAddressHook.cpp  DS3_ReplaceServerAddressHook.h
Source/Injector/Injector/: Injector.cpp  Injector.h
Source/Injector/Tests/: CMakeLists.txt  HookManagerTests.cpp  InjectorInitTests.cpp  InjectorTestsMain.cpp
Source/Loader/: CMakeLists.txt  Loader.csproj
Source/Loader.Avalonia/: Directory.Build.props  Loader.Avalonia.csproj
Source/Loader.Avalonia/Tests/: LaunchCoordinatorTests.cs
Source/Loader.Tests/: ConfigLauncherServerQueryServiceTests.cs
Source/Loader/Forms/: MainForm.Extracted.cs  MainForm.cs
Source/Loader/Services/: ConfigService.cs  Launcher.cs  ServerQueryService.cs
Source/Loader/Tests/: LauncherTests.cs  Loader.Tests.csproj
Source/Loader/Utils/: NetUtils.cs  WinAPI.cs
Source/MasterServer/: package-lock.json  package.json
Source/MasterServer/src/: index.js
Source/Server/: CMakeLists.txt  Entry.cpp
Source/Server.DarkSouls2/: CMakeLists.txt
Source/Server.DarkSouls2/Protobuf/: DS2_Protobufs.h
Source/Server.DarkSouls2/Server/: DS2_Game.cpp  DS2_Game.h
Source/Server.DarkSouls3/: CMakeLists.txt
Source/Server.DarkSouls3/Protobuf/: DS3_Protobufs.h
Source/Server.DarkSouls3/Server/: DS3_Game.cpp  DS3_Game.h
Source/Server/Client/: Client.cpp  Client.h
Source/Server/Config/: BuildConfig.h  RuntimeConfig.cpp  RuntimeConfig.h
Source/Server/Protobuf/: SharedProtobufs.h
Source/Server/Server/: Game.h  Server.cpp  Server.h  ServerManager.cpp  ServerManager.h  Service.h
Source/Shared/: CMakeLists.txt
Source/Shared/Game/: GameType.cpp  GameType.h  PlayerDataUtils.h
Source/Shared/Platform/: Platform.h
Source/Shared/Tests/: PlayerDataUtilsTests.cpp
Source/WebUI/Static/: index.html
Source/hub/: package-lock.json  package.json
(+228 files in other folders)
